tests/should_fail/sf002_unclosed_paren.hs
-- Should fail: unclosed parenthesis in type signature
module Sf002UnclosedParen where

f :: (Int -> Int
f x = x
